# simpleColorReplacer

./: .gitignore  CMakeLists.txt  README  objectColorPicker.kdev4
src/: main.cpp  objectcolorpicker.cpp  objectcolorpicker.h  objectcolorpicker.ui
